--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
     --black: #0b0c10;
     --grey: #c5c6c7;
     --darkblue: #1f2833;
+    --border: 4px solid yellow;
 }
 
 body{
@@ -23,7 +24,7 @@ font-family: 'Roboto', sans-serif;
 }
 
 .inside-boxes{
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     background-color: black;
     color: white;
     cursor: pointer;
@@ -50,7 +51,234 @@ font-family: 'Roboto', sans-serif;
     cursor: pointer;
 }
   
-  
+.home-box{
+    width: 40%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #45a29e; */
+}
+
+.home-box img{
+    width: 50%;
+    height: 50%;
+    margin: 25px;
+}
+
+.home-box div{
+    width: 50%;
+    /* background-color: #1f2833; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.home-box div button{
+    background-color: rgb(209, 197, 23);
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.create-box{
+    width: 40%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: yellow;
+    margin-top: 100px;
+    padding: 10px;
+    /* box-shadow: 1px 1px 12px 10px rgb(99, 99, 4);
+    box-shadow: rgb(194, 194, 22) 0px 6px 26px; */
+    border-radius: 10px;
+    padding: 25px;
+}
+
+
+.create-box input{
+    padding: 10px;
+    border: 0;
+    background-color: yellow;
+    border-bottom: 1px solid black;
+}
+
+.create-box input:focus{
+    outline: none;
+}
+
+.create-box button{
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: 0;
+    cursor: pointer;
+}
+
+#game{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 50px;
+}
+
+#middle-box-turn{
+    font-size: 40px;
+    color: white;
+    margin-top: 50px;
+    /* animation-name: example;
+    animation-duration: 1s; */
+}
+
+  /* @keyframes example {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(2);
+    }
+  } */
+
+.game-name-score{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+}
+
+#middle-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* CSS */
+.button-36 {
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 4rem;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-36:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 15px 30px;
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+  .button-36 {
+    padding: 0 2.6rem;
+  }
+}
 
   
 
+/* CSS */
+.button-61 {
+  align-items: center;
+  appearance: none;
+  border-radius: 4px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px,rgba(0, 0, 0, .14) 0 2px 2px 0,rgba(0, 0, 0, .12) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: Roboto,sans-serif;
+  font-size: .875rem;
+  font-weight: 500;
+  height: 36px;
+  justify-content: center;
+  letter-spacing: .0892857em;
+  line-height: normal;
+  min-width: 64px;
+  outline: none;
+  overflow: visible;
+  padding: 0 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  will-change: transform,opacity;
+  margin: 15px;
+}
+
+.button-61:hover {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:disabled {
+  background-color: rgba(0, 0, 0, .12);
+  box-shadow: rgba(0, 0, 0, .2) 0 0 0 0, rgba(0, 0, 0, .14) 0 0 0 0, rgba(0, 0, 0, .12) 0 0 0 0;
+  color: rgba(0, 0, 0, .37);
+  cursor: default;
+  pointer-events: none;
+}
+
+.button-61:not(:disabled) {
+  background-color: #6200ee;
+}
+
+.button-61:focus {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:active {
+  box-shadow: rgba(0, 0, 0, .2) 0 5px 5px -3px, rgba(0, 0, 0, .14) 0 8px 10px 1px, rgba(0, 0, 0, .12) 0 3px 14px 2px;
+  background: #A46BF5;
+}
+
+.game-name-score img{
+    width: 110px;
+    height: 100px;
+    border-radius: 100px;
+    margin: 10px;
+}
+
+.top-border{
+    border-top: 2px solid yellow;
+}
+
+.right-border{
+    border-right: 2px solid yellow;
+}
+
+[id='00'], [id='01']{
+    border-right: var(--border)
+}
+
+[id='10'], [id='11'], [id='20'], [id='21']{
+    border-right: var(--border);
+    border-top: var(--border)
+}
+
+[id='12'], [id='22']{
+    border-top: var(--border)
+}
